// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tabs > passes through additional html attributes 1`] = `
<div
  class="tabs class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <div
    class="tabs__items"
    role="tablist"
  />
  <div
    class="tabs__content"
  />
</div>
`;

exports[`tabs > passes through additional html attributes 2`] = `
<div
  class="tabs class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <div
    class="tabs__items"
    role="tablist"
  />
  <div
    class="tabs__content"
  />
</div>
`;

exports[`tabs > renders basic version with 3 tabs and 3 panels 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"tabs"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"tabs__items"[39m
      [33mrole[39m=[32m"tablist"[39m
    [36m>[39m
      [36m<div[39m
        [33maria-controls[39m=[32m"s0-tabpanel-0"[39m
        [33maria-selected[39m=[32m"true"[39m
        [33mclass[39m=[32m"tabs__item"[39m
        [33mid[39m=[32m"s0-tabs-0"[39m
        [33mrole[39m=[32m"tab"[39m
      [36m>[39m
        [36m<span>[39m
          [0mHeading 0[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-controls[39m=[32m"s0-tabpanel-1"[39m
        [33mclass[39m=[32m"tabs__item"[39m
        [33mid[39m=[32m"s0-tabs-1"[39m
        [33mrole[39m=[32m"tab"[39m
      [36m>[39m
        [36m<span>[39m
          [0mHeading 1[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-controls[39m=[32m"s0-tabpanel-2"[39m
        [33mclass[39m=[32m"tabs__item"[39m
        [33mid[39m=[32m"s0-tabs-2"[39m
        [33mrole[39m=[32m"tab"[39m
      [36m>[39m
        [36m<span>[39m
          [0mHeading 2[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"tabs__content"[39m
    [36m>[39m
      [36m<div[39m
        [33maria-labelledby[39m=[32m"s0-tabs-0"[39m
        [33mclass[39m=[32m"tabs__panel"[39m
        [33mid[39m=[32m"s0-tabpanel-0"[39m
        [33mrole[39m=[32m"tabpanel"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"tabs__cell"[39m
        [36m>[39m
          [36m<div>[39m
            [0mPanel 0[0m
          [36m</div>[39m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-labelledby[39m=[32m"s0-tabs-1"[39m
        [33mclass[39m=[32m"tabs__panel"[39m
        [33mhidden[39m=[32m""[39m
        [33mid[39m=[32m"s0-tabpanel-1"[39m
        [33mrole[39m=[32m"tabpanel"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"tabs__cell"[39m
        [36m>[39m
          [36m<div>[39m
            [0mPanel 1[0m
          [36m</div>[39m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-labelledby[39m=[32m"s0-tabs-2"[39m
        [33mclass[39m=[32m"tabs__panel"[39m
        [33mhidden[39m=[32m""[39m
        [33mid[39m=[32m"s0-tabpanel-2"[39m
        [33mrole[39m=[32m"tabpanel"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"tabs__cell"[39m
        [36m>[39m
          [36m<div>[39m
            [0mPanel 2[0m
          [36m</div>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`tabs > renders basic version with 3 tabs and 3 panels on the second panel 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"tabs"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"tabs__items"[39m
      [33mrole[39m=[32m"tablist"[39m
    [36m>[39m
      [36m<div[39m
        [33maria-controls[39m=[32m"s0-tabpanel-0"[39m
        [33mclass[39m=[32m"tabs__item"[39m
        [33mid[39m=[32m"s0-tabs-0"[39m
        [33mrole[39m=[32m"tab"[39m
      [36m>[39m
        [36m<span>[39m
          [0mHeading 0[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-controls[39m=[32m"s0-tabpanel-1"[39m
        [33maria-selected[39m=[32m"true"[39m
        [33mclass[39m=[32m"tabs__item"[39m
        [33mid[39m=[32m"s0-tabs-1"[39m
        [33mrole[39m=[32m"tab"[39m
      [36m>[39m
        [36m<span>[39m
          [0mHeading 1[0m
        [36m</span>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-controls[39m=[32m"s0-tabpanel-2"[39m
        [33mclass[39m=[32m"tabs__item"[39m
        [33mid[39m=[32m"s0-tabs-2"[39m
        [33mrole[39m=[32m"tab"[39m
      [36m>[39m
        [36m<span>[39m
          [0mHeading 2[0m
        [36m</span>[39m
      [36m</div>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"tabs__content"[39m
    [36m>[39m
      [36m<div[39m
        [33maria-labelledby[39m=[32m"s0-tabs-0"[39m
        [33mclass[39m=[32m"tabs__panel"[39m
        [33mhidden[39m=[32m""[39m
        [33mid[39m=[32m"s0-tabpanel-0"[39m
        [33mrole[39m=[32m"tabpanel"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"tabs__cell"[39m
        [36m>[39m
          [36m<div>[39m
            [0mPanel 0[0m
          [36m</div>[39m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-labelledby[39m=[32m"s0-tabs-1"[39m
        [33mclass[39m=[32m"tabs__panel"[39m
        [33mid[39m=[32m"s0-tabpanel-1"[39m
        [33mrole[39m=[32m"tabpanel"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"tabs__cell"[39m
        [36m>[39m
          [36m<div>[39m
            [0mPanel 1[0m
          [36m</div>[39m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33maria-labelledby[39m=[32m"s0-tabs-2"[39m
        [33mclass[39m=[32m"tabs__panel"[39m
        [33mhidden[39m=[32m""[39m
        [33mid[39m=[32m"s0-tabpanel-2"[39m
        [33mrole[39m=[32m"tabpanel"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"tabs__cell"[39m
        [36m>[39m
          [36m<div>[39m
            [0mPanel 2[0m
          [36m</div>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`tabs-heading > passes through additional html attributes from child tab 1`] = `
<div
  aria-controls="s0-tabpanel-0"
  aria-selected="true"
  class="class1 tabs__item"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  id="s0-tabs-0"
  role="tab"
  style="color:red"
  type="number"
>
  <span />
</div>
`;

exports[`tabs-heading > passes through additional html attributes from child tab 2`] = `
<div
  aria-controls="s0-tabpanel-0"
  aria-selected="true"
  class="class1 tabs__item"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  id="s0-tabs-0"
  role="tab"
  style="color:red"
  type="number"
>
  <span />
</div>
`;

exports[`tabs-panel > passes through additional html attributes from child panel 1`] = `
<div
  aria-labelledby="s0-tabs-0"
  class="class1 tabs__panel"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  id="s0-tabpanel-0"
  role="tabpanel"
  style="color:red"
  type="number"
>
  <div
    class="tabs__cell"
  >
    <div />
  </div>
</div>
`;

exports[`tabs-panel > passes through additional html attributes from child panel 2`] = `
<div
  aria-labelledby="s0-tabs-0"
  class="class1 tabs__panel"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  id="s0-tabpanel-0"
  role="tabpanel"
  style="color:red"
  type="number"
>
  <div
    class="tabs__cell"
  >
    <div />
  </div>
</div>
`;
